Delete favicon.ico in order to keep favicon.png

--- a/css/main.css
+++ b/css/main.css
@@ -95,9 +95,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
-
+.container {
+  text-align: center;
+}
 
 
 
