--- a/css/main.css
+++ b/css/main.css
@@ -97,13 +97,24 @@ Author's custom styles
 body {
   color: white;
   text-align: center;
+  font-family: 'Special Elite', cursive;
+  text-decoration-style: solid;
 }
 
-h1 {
+input {
+  color: :red;
+}
+
+
+h1, h3, p {
   font-family: 'Special Elite', cursive;
   color: :white;
   text-align: center;
   font-size: 20px;
+}
+
+.fname {
+  color: :red;
 }
 
 .bienvenubis {
@@ -115,19 +126,22 @@ h1 {
 
 .player {
   font-family: 'Special Elite', cursive;
-  color: : #cccccc;
+  color: red;
   text-align: center;
   font-size: 20px;
 }
 
-img {
-  height: 90px;
-    width: 90px;
+.arene {
+  font-family: 'Special Elite', cursive;
+  color: red;
+  text-align: center;
+  font-size: 30px;
 }
 
-figcaption {
-  text-align: center;
-  font-size: 10px;
+
+img {
+  height: 90px;
+  width: 90px;
 }
 
 
